# hemm

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/: run-container-tests.md  run-onboarding-test.md  run-tests.md  start-dev-container.md
.githooks/: pre-push
.github/workflows/: auto-merge.yml  auto-release.yml  ci.yml  codeql.yml  patch-release.yml  release.yml  traceability.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: ab_comparison_results.md  testing.md
specs/: README.md  coverage.md  requirements.md
specs/001-manifest-schema/: plan.md  spec.md  tasks.md
specs/002-milp-central-solver/: plan.md  spec.md  tasks.md
specs/003-generic-entities/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-forecast-price-adapters/: plan.md  spec.md  tasks.md
specs/005-sim-harness/: plan.md  spec.md  tasks.md
specs/006-online-identification/: plan.md  spec.md  tasks.md
specs/007-ha-config-flow/: plan.md  spec.md  tasks.md
specs/008-coordinator-runtime/: plan.md  spec.md  tasks.md
specs/009-distribution-release/: plan.md  spec.md  tasks.md
specs/010-actuator-verification/: spec.md
src/hemm/: __main__.py  cli.py
src/hemm_core/: __init__.py  __main__.py  cli.py
testdata/archetypes/: family4.yaml  retired_couple.yaml  single_worker.yaml  wfh_techie.yaml  working_couple.yaml
testdata/forecasts/: price_dynamic_spring.json  solar_spring_day.json
testdata/profiles/: family4-2026-s17.parquet
testdata/scenarios/: battery_arbitrage.yaml  control_class_mix.yaml  ev_departure.yaml  family4_winter_setback.yaml  full_house.yaml  heat_pump_shift.yaml  onboarding.yaml  pool_pump.yaml  water_heater_legionella.yaml
tests/: __init__.py  _parity.py  req_tags_manifest.json  test_adapters.py  test_branding_audit.py  test_clock.py  test_comparison.py  test_components.py  test_constraint_manager.py  test_constraints.py  test_constraints_generic.py  test_consumers.py  test_distributed.py  test_identification_thermal.py  test_initial_state.py  test_manifest_types.py  test_markers.py  test_messages.py  test_occupants.py  test_onboarding_examples.py  test_release_packaging.py  test_req_coverage_guard.py  test_rw2_limits.py  test_scenario_trust.py  test_schema_export.py  test_sim.py  test_smoke.py  test_solver.py  test_solver_parity.py  test_thesis_zero_solver.py  test_validator.py  test_version.py
tools/: branding_audit.py  capture_golden_003.py  check_clock.py  codex_brief.md  codex_brief.py  compress_container_log.py  remap.sh  remap_verify.py  req_coverage.py
(+85 files in other folders)
