[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hemm"
version = "2026.7.3"
description = "Distributed Energy Optimizer for Home Automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "HEMM Contributors" }]
keywords = ["energy", "optimization", "home-automation", "milp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyomo>=6.7",
    "highspy>=1.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
    "types-PyYAML>=6.0",
]

[project.scripts]
hemm = "hemm_core.cli:main"

[project.urls]
Homepage = "https://github.com/hemm-ems/hemm"
Repository = "https://github.com/hemm-ems/hemm"

[tool.hatch.build.targets.wheel]
packages = ["src/hemm_core"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = ["E501", "TC001", "TC003"]  # line length handled by formatter; TC rules conflict with Pydantic runtime needs

[tool.ruff.lint.isort]
known-first-party = ["hemm_core"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["hemm_core"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (default, fast)",
    "container: Container-based integration tests (requires Docker)",
    "pi: Tests that run on Raspberry Pi hardware only",
    "slow: Long-running simulation tests",
    "req: Requirement(s) this test covers, e.g. req('002:FR-001') — scanned by tools/req_coverage.py",
]
addopts = "-m 'not container and not pi and not slow' --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hemm_core"]
branch = true
omit = ["*/hemm_core/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
